# linear_regression_model

./: README.md  pyproject.toml
summative/API/: feature_order.json  prediction.py  requirements.txt  scaler.pkl
summative/FlutterApp/: pubspec.yaml
summative/FlutterApp/lib/: main.dart
summative/linear_regression/: best_model.pkl  multivariate.ipynb  scaler.pkl
