[project]
name = "linear-regression-model"
version = "1.0.0"
description = "Predicting student exam scores from study habits and wellbeing indicators - Linear Regression summative assignment (data analysis, FastAPI, Flutter)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "scikit-learn==1.8.0",
    "joblib>=1.4.2",
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "uvicorn==0.30.6",
    "python-multipart==0.0.9",
    "jupyter>=1.0.0",
    "nbformat>=5.10.0",
]

[tool.uv]
package = false
